# Online-course-management-system

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
frontend/: index.html  jsconfig.json  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/Components/AuthComponents/: Login.jsx  Logout.jsx  Register.jsx
frontend/src/Components/CourseComponents/: AddCourseForm.jsx  CourseDetail.jsx  CourseList.jsx  EditCourseForm.jsx  ManageCourseStudents.jsx  ManageCourseTeachers.jsx
frontend/src/Components/GradeComponents/: AddGradeForm.jsx  EditGradeForm.jsx  (+2 more)
frontend/src/Contexts/: AuthContext.jsx
frontend/src/Hooks/: UseAuthFetch.jsx
frontend/src/Routes/: AppRoutes.jsx  PrivateRoute.jsx  RoleRoute.jsx
frontend/src/Styles/: auth.module.css  layout.module.css  variables.css
src/: db.sqlite3
src/courses/: admin.py  models.py  selectors.py  serializers.py  services.py  urls.py  views.py
src/courses/migrations/: 0001_initial.py  0002_initial.py  0003_homework_deadline.py  0004_homework_description.py  0005_alter_grade_submission.py  0006_course_description.py  0007_alter_homework_lecture.py
src/management_system/: asgi.py  settings.py  urls.py  wsgi.py
src/media/presentations/: test_doc1_4XP8SCd.docx  test_doc2_xrlsqf8.docx  test_doc_6CyuLD1.docx  реферат_Бородич.docx
src/presentations/: Шпоры.docx
src/templates/: index.html  login.html  register.html
src/users/: models.py  selectors.py  serializers.py  services.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
(+19 files in other folders)
